[package]
name = "markab_parser"
version = "0.4.0"
authors = ["arkhe634 <arkhe634@gmail.com>"]
edition = "2018"
repository = "https://github.com/arkhe634/markab"
keywords = ["parser", "combinator"]
license = "MIT/Apache-2.0"
readme = "../README.md"
description = "A simple, copy-less and rich-error-message parser combinator library."

[dependencies]
either = "1.5.0"
